--- a/pasteleria/sitio_web/templates/auth/user_list.html
+++ b/pasteleria/sitio_web/templates/auth/user_list.html
@@ -1,6 +1,6 @@
 {% extends "base_crud.html" %}
 
-{% block title %}Gestión de Pedidos{% endblock %}
+{% block title %}Gestión de Usuarios{% endblock %}
 
 {% block content%}
 
