--- a/pasteleria/templates/registration/password_reset_confirm.html
+++ b/pasteleria/templates/registration/password_reset_confirm.html
@@ -3,16 +3,19 @@
 {% block content %}
 {% load static %}
     <form class="form-signin" action="" method="POST">
-        {% csrf_token %}
+        <div stlyle="display:none">
+            <input type="hidden" value="{{ csrf_token }}" name="csrfmiddlewaretoken">
+        </div>
         <img class="mb-4" src="{% static 'assets/img/pastel.png' %}" alt="" width="72" height="72">
         <h1 class="h3 mb-3 font-weight-normal">Recuperar contraseña</h1>
         
         {% load widget_tweaks %}
-
-        {% render_field form.email placeholder=form.email.label class+="form-control" %}
-
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Enviar instrucciones</button>
         
+        {% render_field form.new_password1 placeholder=form.new_password1.label class+="form-control" %}
+        {% render_field form.new_password2 placeholder=form.new_password2.label class+="form-control" %}
+
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Cambiar Contraseña</button>
+
         <p class="mt-5 mb-3 text-muted">&copy; 2020</p>
     </form>
 {% endblock %}
