--- a/pasteleria/templates/user_create.html
+++ b/pasteleria/templates/user_create.html
@@ -1,6 +1,6 @@
 {% extends "base_crud.html" %}
 
-{% block title %}Gestión de Usuario{% endblock %}
+{% block title %}Gestión de Usuarios{% endblock %}
 
 {% block content%}
 
@@ -9,7 +9,7 @@
     <table>
         {{form.as_table}}
     </table>
-    <input type="submit" value ="Enviar">
+    <input type="submit" value ="Crear">
 </form>
 
 {%endblock%}
