--- a/pasteleria/templates/registration/login.html
+++ b/pasteleria/templates/registration/login.html
@@ -1,45 +1,10 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Jekyll v4.1.1">
-    <title>Signin Template · Bootstrap</title>
-
-    <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/sign-in/">
-
-    <!-- Bootstrap core CSS -->
-    {% load static %}
-    <link href="{% static 'css/styles.css' %}" rel="stylesheet">
-
-    <style>
-        .bd-placeholder-img {
-            font-size: 1.125rem;
-            text-anchor: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
-        }
-
-        @media (min-width: 768px) {
-            .bd-placeholder-img-lg {
-                font-size: 3.5rem;
-            }
-        }
-
-    </style>
-    <!-- Custom styles for this template -->
-    <link href="{% static 'css/signin.css' %}" rel="stylesheet">
-</head>
-
-<body class="text-center">
+{% extends "base_login.html" %}
+{% block title %}Ingresar{% endblock %}
+{% block content %}
+{% load static %}
     <form class="form-signin" action="{% url 'login' %}" method="POST">
         {% csrf_token %}
-        <img class="mb-4" src="../assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+        <img class="mb-4" src="{% static 'assets/img/pastel.png' %}" alt="" width="72" height="72">
         <h1 class="h3 mb-3 font-weight-normal">Ingreso al portal</h1>
         
         {% load widget_tweaks %}
@@ -49,10 +14,15 @@
 
         <button class="btn btn-lg btn-primary btn-block" type="submit">Ingresar</button>
 
+        
+        {% if form.errors %}
+        <div class="alert alert-danger" role="alert">
+            Usuario o contraseña incorrecta, Intente nuevamente
+        </div>
+        {% endif %}
+
         <a href="{% url 'password_reset'%}">¿Olvidó su contraseña?</a>
 
         <p class="mt-5 mb-3 text-muted">&copy; 2020</p>
     </form>
-</body>
-
-</html>
+{% endblock %}
